--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": true,
@@ -586,7 +586,7 @@
     "            if s[-1-idx] != '{':\n",
     "                return False\n",
     "        if s[idx] == '[':\n",
-    "            if s[-1-idx] != ']':\n",
+    "            if s[-1-idx] != ']': \n",
     "                return False\n",
     "        if s[idx] == ']':\n",
     "            if s[-1-idx] != '[':\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -617,6 +617,46 @@
     "assert is_valid('()') == True\n",
     "assert is_valid('([{]}') == False\n",
     "assert is_valid('([{}])') == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid('([[[[[[[[[)') == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid('([[[[[[[[[)')"
    ]
   },
   {
